--- a/index.html
+++ b/index.html
@@ -233,8 +233,9 @@
                 <div class="contact-item">
                     <div class="contact-icon">📞</div>
                     <div class="contact-details">
-                        <h3>Phone</h3>
+                        <h3>Phone/WhatsApp</h3>
                         <a class="tel" href="tel:+85269767322">6976 7322</a>
+                        <a class="tel" href="tel:+85266432013">6643 2013</a>
                     </div>
                 </div>
                 
