--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <div class="nav-links">
         <a href="#Home">Home</a>
         <a href="#Date">Date</a>
-        <a href="#Ceremony">Ceremony</a>
-        <a href="#Location">Location</a>
-        <a href="#Getting-There">Getting There</a>
-        <a href="#Accommodation">Accommodation</a>
+        <a href="#Ceremony">The Ceremony</a>
         <a href="#Dress-Code">Dress Code</a>
+        <a href="#Location">Location</a>
+        <a href="#Accommodation">Accommodation</a>
         <a href="#RSVP">RSVP</a>
+        <a href="#Getting-There">Getting There</a>
         <a href="#Contact">Contact</a>
     </div>
 </div>
@@ -84,6 +84,11 @@
     <p>Details about section 3.</p>
 </section>
 
+<section id="Dress-Code">
+    <h2>The Dress Code</h2>
+    <p>Details about the dress code will be provided here.</p>
+</section>
+
 <section id="Location">
     <h2>Location! Location! Location!</h2>
     <p>The wedding will be held at <a href="http://www.webersburg.co.za/" target="_blank">Webersburg Wine Estate</a> in Stellenbosch South Africa.</p>
@@ -92,29 +97,6 @@
     </div>
 </section>
 
-<section id="Getting-There">
-    <h2>Flights & Activities</h2>
-    <div class="flights">
-        <h3>Flights</h3>
-        <ul>
-            <li>From Hong Kong: Fly direct with <a href="https://www.cathaypacific.com/" target="_blank">Cathay Pacific</a> to OR Tambo International Airport in Johannesburg</li>
-            <li>Other options from Hong Kong: <a href="https://www.qatarairways.com/" target="_blank">Qatar Airways</a> to Cape Town via Doha. Or <a href="https://www.emirates.com/" target="_blank">Emirates</a> to Cape Town via Dubai. Other options include <a href="https://www.ethiopianairlines.com/book/booking/flight" target="_blank">Ethiopian</a>, <a href="https://www.qantas.com/" target="_blank">Qantas</a> and <a href="https://www.turkishairlines.com" target="_blank">Turkish</a> Airlines., but these may be a longer travel time.</li><br>
-            <li>From Johannesburg: Fly direct to Cape town, with either <a href="https://www.flysafair.com/" target="_blank">FlySafair</a>, <a href="https://www.lift.co.za/" target="_blank">Lift Airways</a>, <a href="https://www.flysaa.com/" target="_blank">FlySAA</a>, <a href="https://www.cemair.co.za/index.php" target="_blank">CemAir</a> or <a href="https://www.flyairlink.com/en/za/" target="_blank">Airlink</a>.</li>
-            <li>From Cape Town: Use Uber or Bolt to get to Webersburg from the airport. Or rent a car from <a href="https://www.hertz.co.za/" target="_blank">Hertz</a>, <a href="http://www.budget.co.za/" target="_blank">Budget</a>, <a href="https://www.sani.co.za/" target="_blank">Sani Sixt</a>, <a href="https://www.woodford.co.za/branches/cape-town-international" target="_blank">Woodford</a>, <a href="https://www.avis.co.za/" target="_blank">Avis</a>, <a href="https://www.tempestcarhire.co.za/rental-locations/western-cape/cape-town-international-airport" target="_blank">Tempest</a> or <a href="https://www.europcar.co.za/rental-locations/rsa/western-cape/cape-town-international-airport" target="_blank">Europcar</a>.</li>
-            <li>Public transport is not recommended.</li>
-        </ul>
-    </div>
-    <div class="activities">
-        <h3>Activities</h3>
-        <ul>
-            <li>There are many activities to do in <a href="https://www.visitstellenbosch.org/"	 target="_blank">Stellenbosch</a>, including wine tasting, cycling, hiking and more.</li>
-            <li><a href="https://www.sanparks.org/parks/table-mountain" target="_blank">Table Mountain</a> is a must do with a beautiful view of the city and the ocean.</li>
-            <li><a href="https://www.sanparks.org/parks/cape-point" target="_blank">Cape Point</a> is a wonderful national park with beautiful views that includes Simon's Town and its penguin colony.</li>
-            <li><a href="https://www.robben-island.org.za/" target="_blank">Robben Island</a> was a place of imprisonment for Nelson Mandela and many other political prisoners. It is now a UNESCO World Heritage Site.</li>
-            <li>You can visit the <a href="https://www.southafrica.net/gl/en/travel/category/places-to-go/big-city-life/cape-town" target="_blank"> South African Tourism website</a> to find more activities</li>
-        </ul>
-    </div>
-</section>
 
 <section id="Accommodation" class="accommodation">
     <h2>Webersburg Wine Estate</h2>
@@ -180,10 +162,6 @@
     <p>More information about accommodation will be provided here.</p>
 </section>
 
-<section id="Dress-Code">
-    <h2>The Dress Code</h2>
-    <p>Details about the dress code will be provided here.</p>
-</section>
 
 <section id="RSVP">
     <div class="rsvp-container">
@@ -217,6 +195,30 @@
     </div>
 </section>
 
+<section id="Getting-There">
+    <h2>Flights & Activities</h2>
+    <div class="flights">
+        <h3>Flights</h3>
+        <ul>
+            <li>From Hong Kong: Fly direct with <a href="https://www.cathaypacific.com/" target="_blank">Cathay Pacific</a> to OR Tambo International Airport in Johannesburg</li>
+            <li>Other options from Hong Kong: <a href="https://www.qatarairways.com/" target="_blank">Qatar Airways</a> to Cape Town via Doha. Or <a href="https://www.emirates.com/" target="_blank">Emirates</a> to Cape Town via Dubai. Other options include <a href="https://www.ethiopianairlines.com/book/booking/flight" target="_blank">Ethiopian</a>, <a href="https://www.qantas.com/" target="_blank">Qantas</a> and <a href="https://www.turkishairlines.com" target="_blank">Turkish</a> Airlines., but these may be a longer travel time.</li><br>
+            <li>From Johannesburg: Fly direct to Cape town, with either <a href="https://www.flysafair.com/" target="_blank">FlySafair</a>, <a href="https://www.lift.co.za/" target="_blank">Lift Airways</a>, <a href="https://www.flysaa.com/" target="_blank">FlySAA</a>, <a href="https://www.cemair.co.za/index.php" target="_blank">CemAir</a> or <a href="https://www.flyairlink.com/en/za/" target="_blank">Airlink</a>.</li>
+            <li>From Cape Town: Use Uber or Bolt to get to Webersburg from the airport. Or rent a car from <a href="https://www.hertz.co.za/" target="_blank">Hertz</a>, <a href="http://www.budget.co.za/" target="_blank">Budget</a>, <a href="https://www.sani.co.za/" target="_blank">Sani Sixt</a>, <a href="https://www.woodford.co.za/branches/cape-town-international" target="_blank">Woodford</a>, <a href="https://www.avis.co.za/" target="_blank">Avis</a>, <a href="https://www.tempestcarhire.co.za/rental-locations/western-cape/cape-town-international-airport" target="_blank">Tempest</a> or <a href="https://www.europcar.co.za/rental-locations/rsa/western-cape/cape-town-international-airport" target="_blank">Europcar</a>.</li>
+            <li>Public transport is not recommended.</li>
+        </ul>
+    </div>
+    <div class="activities">
+        <h3>Activities</h3>
+        <ul>
+            <li>There are many activities to do in <a href="https://www.visitstellenbosch.org/"	 target="_blank">Stellenbosch</a>, including wine tasting, cycling, hiking and more.</li>
+            <li><a href="https://www.sanparks.org/parks/table-mountain" target="_blank">Table Mountain</a> is a must do with a beautiful view of the city and the ocean.</li>
+            <li><a href="https://www.sanparks.org/parks/cape-point" target="_blank">Cape Point</a> is a wonderful national park with beautiful views that includes Simon's Town and its penguin colony.</li>
+            <li><a href="https://www.robben-island.org.za/" target="_blank">Robben Island</a> was a place of imprisonment for Nelson Mandela and many other political prisoners. It is now a UNESCO World Heritage Site.</li>
+            <li>You can visit the <a href="https://www.southafrica.net/gl/en/travel/category/places-to-go/big-city-life/cape-town" target="_blank"> South African Tourism website</a> to find more activities</li>
+        </ul>
+    </div>
+</section>
+
 <section id="Contact">
     <div class="contact-container">
         <h2>Get in Touch</h2>
@@ -233,9 +235,9 @@
                 <div class="contact-item">
                     <div class="contact-icon">📞</div>
                     <div class="contact-details">
-                        <h3>Phone/WhatsApp</h3>
-                        <a class="tel" href="tel:+85269767322">6976 7322</a>
-                        <a class="tel" href="tel:+85266432013">6643 2013</a>
+                        <h3>Phone / WhatsApp</h3>
+                        <a class="tel" href="tel:+85269767322">Dane: 6976 7322</a><br>
+                        <a class="tel" href="tel:+85266432013">Peony: 6643 2013</a>
                     </div>
                 </div>
                 
