--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 <section id="Ceremony">
     <h2>The Ceremony</h2>
     <p>Details about section 3.</p>
+    <img src="images/Itinerary.jpg" alt="Itinerary" loading="lazy">
 </section>
 
 <section id="Dress-Code">
@@ -90,7 +91,7 @@
 </section>
 
 <section id="Location">
-    <h2>Location! Location! Location!</h2>
+    <h2>Location</h2>
     <p>The wedding will be held at <a href="http://www.webersburg.co.za/" target="_blank">Webersburg Wine Estate</a> in Stellenbosch South Africa.</p>
     <div class="map-container">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3307.508373698393!2d18.839321176341684!3d-34.005159473174714!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1dcc4cb9c41edeb3%3A0x1b8691d95ca344ec!2sWebersburg%20Wine%20Estate!5e0!3m2!1sen!2shk!4v1740929645066!5m2!1sen!2shk" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Webersburg Wine Estate Location"></iframe>
