--- a/index.html
+++ b/index.html
@@ -9,8 +9,32 @@
 </head>
 <body>
 
+    <div id="petals">
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i> 
+        <i></i>
+        <i></i>
+        <i></i> 
+        <i></i>
+        <i></i>
+        <i></i> 
+      </div>
+
 <div class="navbar">
-    <div class="mobile-menu-btn">
+    <div class="mobile-menu-btn" aria-label="Toggle navigation menu">
         <span></span>
         <span></span>
         <span></span>
@@ -45,15 +69,13 @@
 </div>
 
 <section id="Home">
-    <img src="images/Us.jpg" alt="Picture of Us" loading="lazy" class="image-left">
-    
-    <div class="content-center">
-        <h2>Our Love Story</h2>
-        <div class="heart"></div>
-        <p>Every love story is beautiful, but ours is our favorite.</p>
-    </div>
-    
-    <img src="images/moreus.jpg" alt="Another picture of Us" loading="lazy" class="image-right">
+        <img src="images/Us.jpg" alt="Picture of Us" loading="lazy" class="image-left">
+         <div class="content-center">
+          <h2>Our Love Story</h2>
+          <div class="heart"></div>
+          <p>Every love story is beautiful, but ours is our favorite.</p>
+        </div>
+        <img src="images/moreus.jpg" alt="Another picture of Us" loading="lazy" class="image-right">
 </section>
 
 <section id="Date">
@@ -86,15 +108,19 @@
 </section>
 
 <section id="Dress-Code">
-    <h2>The Dress Code</h2>
-    <p>Details about the dress code will be provided here.</p>
+    <div class="dress-code-container">
+        <h2>The Dress Code</h2>
+        <p>Details about the dress code will be provided here.</p>
+    </div>
 </section>
 
 <section id="Location">
-    <h2>Location</h2>
-    <p>The wedding will be held at <a href="http://www.webersburg.co.za/" target="_blank">Webersburg Wine Estate</a> in Stellenbosch South Africa.</p>
-    <div class="map-container">
+    <div class="location-container">    
+        <h2>Location</h2>
+        <p>The wedding will be held at <a href="http://www.webersburg.co.za/" target="_blank">Webersburg Wine Estate</a> in Stellenbosch South Africa.</p>
+        <div class="map-container">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3307.508373698393!2d18.839321176341684!3d-34.005159473174714!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1dcc4cb9c41edeb3%3A0x1b8691d95ca344ec!2sWebersburg%20Wine%20Estate!5e0!3m2!1sen!2shk!4v1740929645066!5m2!1sen!2shk" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Webersburg Wine Estate Location"></iframe>
+        </div>
     </div>
 </section>
 
@@ -197,6 +223,7 @@
 </section>
 
 <section id="Getting-There">
+    <div class="getting-there-container">
     <h2>Flights & Activities</h2>
     <div class="flights">
         <h3>Flights</h3>
@@ -217,6 +244,7 @@
             <li><a href="https://www.robben-island.org.za/" target="_blank">Robben Island</a> was a place of imprisonment for Nelson Mandela and many other political prisoners. It is now a UNESCO World Heritage Site.</li>
             <li>You can visit the <a href="https://www.southafrica.net/gl/en/travel/category/places-to-go/big-city-life/cape-town" target="_blank"> South African Tourism website</a> to find more activities</li>
         </ul>
+    </div>
     </div>
 </section>
 
