--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
 
     <div class="slideshow-container-men">
         <div class="slide">
-            <img src="images/Men1.png" alt="Men's Dress Code 1">
+            <img src="images/men1.png" alt="Men's Dress Code 1">
         </div>
         <div class="slide">
-            <img src="images/Men2.png" alt="Men's Dress Code 2">
+            <img src="images/men2.png" alt="Men's Dress Code 2">
         </div>
         <div class="slide">
-            <img src="images/Men3.png" alt="Men's Dress Code 3">
+            <img src="images/men3.png" alt="Men's Dress Code 3">
         </div>
         
         <!-- Navigation arrows -->
@@ -161,13 +161,13 @@
     <!-- Women's Slideshow -->
     <div class="slideshow-container-women">
         <div class="slide">
-            <img src="images/Women1.png" alt="Women's Dress Code 1">
+            <img src="images/women1.png" alt="Women's Dress Code 1">
         </div>
         <div class="slide">
-            <img src="images/Women2.png" alt="Women's Dress Code 2">
+            <img src="images/women2.png" alt="Women's Dress Code 2">
         </div>
         <div class="slide">
-            <img src="images/Women3.png" alt="Women's Dress Code 3">
+            <img src="images/women3.png" alt="Women's Dress Code 3">
         </div>
         
         <!-- Navigation arrows -->
