--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <!-- Men's Slideshow -->
     <div class="slideshow-container-men">
         <div class="slide">
-            <img src="images/men1.png" alt="Men's Dress Code 1" loading="lazy">
+            <img src="images/men.png" alt="Men's Dress Code 1" loading="lazy">
         </div>
         <div class="slide">
             <img src="images/men2.png" alt="Men's Dress Code 2" loading="lazy">
