--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 </section>
 
 <section id="Date">
-    <h2>Save the date: 01 December 2025</h2>
+    <h2>Save the date: <br> 01 December 2025</h2>
     <p>The countdown</p>
     <div id="clockdiv">
         <div>
