--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <title>Peony & Dane's Wedding</title>
 </head>
 <body>
+    <div id="loading-screen">
+        <img src="images/ring.png" alt="Your Logo">
+    </div>
+
+    <div id="main-content">
 
     <div id="petals">
         <i class="fa-solid fa-heart"></i>
@@ -392,6 +397,7 @@
         </div>
     </div>
 </section>
+    </div>
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
 <script src="./script.js"></script>
 </body>
