--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
 </head>
 <body>
     <div id="loading-screen">
-        <img src="images/ring.png" alt="Your Logo">
+        <img src="images/untitled.png" alt="Loading...">
     </div>
-
-    <div id="main-content">
-
     <div id="petals">
         <i class="fa-solid fa-heart"></i>
         <i class="fa-solid fa-heart"></i>
@@ -397,7 +394,6 @@
         </div>
     </div>
 </section>
-    </div>
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
 <script src="./script.js"></script>
 </body>
