--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 <div class="header">
     <h1>Welcome to Our Wedding</h1>
-    <p>Join us in celebrating our special day.</p>
+    <p class="header-welcome">Join us in celebrating our special day.</p>
         <div class="header-images">
         <div class="image-container-peony">
             <img src="images/Peony.jpg" alt="Picture of Peony" loading="lazy">
@@ -94,8 +94,9 @@
 </section>
 
 <section id="Date">
-    <h2>Save the date: <br> 01 December 2025</h2>
-    <p>The countdown</p>
+    <h2>Save the date:</h2> <br>
+    <p class="deadline">01 December 2025</p>
+    <p class="countdown">The countdown</p>
     <div id="clockdiv">
         <div>
             <span class="days" id="day"></span>
