--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 <section id="Date">
     <h2>Save the date:</h2> <br>
-    <p class="deadline">01 December 2025</p>
+    <h2 class="deadline">01 December 2025</h2>
     <p class="countdown">The countdown</p>
     <div id="clockdiv">
         <div>
@@ -122,7 +122,7 @@
     <h2>The Ceremony</h2>
     <p>The following itinerary is a guide to the events planned for the day, it will be finalised closer to the date. </p>
     <img src="images/itinerary.jpeg" alt="Itinerary" loading="lazy">
-    <p>Predrinks and canapés will be served before the ceremony begins.
+    <p>Predrinks and canapés will be served before the ceremony.
         <br> 
         Dinner will be served during the ceremony, more details will be provided closer to the date.
         <br>
