--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Big+Shoulders+Stencil+Text:wght@400;700&display=swap" rel="stylesheet">
     <title>Peony & Dane's Wedding</title>
 </head>
 <body>
@@ -67,11 +67,11 @@
     <p class="header-welcome">Join us in celebrating our special day.</p>
         <div class="header-images">
         <div class="image-container-peony">
-            <img src="images/Peony.jpg" alt="Picture of Peony" loading="lazy">
+            <img src="images/peony.jpg" alt="Picture of Peony" loading="lazy">
             <div class="image-caption">Peony</div>
         </div>
         <div class="image-container-dane">
-            <img src="images/Dane.jpg" alt="Picture of Dane" loading="lazy">
+            <img src="images/dane2.jpg" alt="Picture of Dane" loading="lazy">
             <div class="image-caption">Dane</div>
         </div>
     </div>
@@ -84,7 +84,7 @@
 </div>
 
 <section id="Home">
-        <img src="images/Us.jpg" alt="Picture of Us" loading="lazy" class="image-left">
+        <img src="images/us.jpg" alt="Picture of Us" loading="lazy" class="image-left">
          <div class="content-center">
           <h2>Our Love Story</h2>
           <div class="heart"></div>
