--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
     <p class="header-welcome">Join us in celebrating our special day.</p>
         <div class="header-images">
         <div class="image-container-peony">
-            <img src="images/peony.jpg" alt="Picture of Peony" loading="lazy">
+            <img src="images/peony1.jpg" alt="Picture of Peony" loading="lazy">
             <div class="image-caption">Peony</div>
         </div>
         <div class="image-container-dane">
-            <img src="images/dane2.jpg" alt="Picture of Dane" loading="lazy">
+            <img src="images/dane.jpg" alt="Picture of Dane" loading="lazy">
             <div class="image-caption">Dane</div>
         </div>
     </div>
@@ -84,7 +84,7 @@
 </div>
 
 <section id="Home">
-        <img src="images/us.jpg" alt="Picture of Us" loading="lazy" class="image-left">
+        <img src="images/us1.jpg" alt="Picture of Us" loading="lazy" class="image-left">
          <div class="content-center">
           <h2>Our Love Story</h2>
           <div class="heart"></div>
