--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="image-caption">Peony</div>
         </div>
         <div class="image-container-dane">
-            <img src="images/dane.jpg" alt="Picture of Dane" loading="lazy">
+            <img src="images/dane2.jpg" alt="Picture of Dane" loading="lazy">
             <div class="image-caption">Dane</div>
         </div>
     </div>
