--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
               The Vineyard Cottages (Sleeps 26)
           </p>
           <p class="accommodation-info" >
-            Our Vineyard Cottages are situated amongst the vineyards with breathtaking dam and mountain views
+            Our Vineyard Cottages are situated amongst the vineyards with breathtaking dam and mountain views.
         </p>
         </div>
     </section>
@@ -330,12 +330,12 @@
     <div class="flights">
         <h3>Flights</h3>
         <ul>
-            <li>From Hong Kong: Fly direct with <a href="https://www.cathaypacific.com/" target="_blank">Cathay Pacific</a> to OR Tambo International Airport in Johannesburg</li>
+            <li>From Hong Kong: Fly direct with <a href="https://www.cathaypacific.com/" target="_blank">Cathay Pacific</a> to OR Tambo International Airport in Johannesburg.</li>
             <li>Other options from Hong Kong: <a href="https://www.qatarairways.com/" target="_blank">Qatar Airways</a> to Cape Town via Doha. Or <a href="https://www.emirates.com/" target="_blank">Emirates</a> to Cape Town via Dubai. Other options include <a href="https://www.ethiopianairlines.com/book/booking/flight" target="_blank">Ethiopian</a>, <a href="https://www.qantas.com/" target="_blank">Qantas</a> and <a href="https://www.turkishairlines.com" target="_blank">Turkish</a> Airlines., but these may be a longer travel time.</li><br>
             <li>From Johannesburg: Fly direct to Cape town, with either <a href="https://www.flysafair.com/" target="_blank">FlySafair</a>, <a href="https://www.lift.co.za/" target="_blank">Lift Airways</a>, <a href="https://www.flysaa.com/" target="_blank">FlySAA</a>, <a href="https://www.cemair.co.za/index.php" target="_blank">CemAir</a> or <a href="https://www.flyairlink.com/en/za/" target="_blank">Airlink</a>.</li>
             <li>From Cape Town: Use Uber or Bolt to get to Webersburg from the airport. Or rent a car from <a href="https://www.hertz.co.za/" target="_blank">Hertz</a>, <a href="http://www.budget.co.za/" target="_blank">Budget</a>, <a href="https://www.sani.co.za/" target="_blank">Sani Sixt</a>, <a href="https://www.woodford.co.za/branches/cape-town-international" target="_blank">Woodford</a>, <a href="https://www.avis.co.za/" target="_blank">Avis</a>, <a href="https://www.tempestcarhire.co.za/rental-locations/western-cape/cape-town-international-airport" target="_blank">Tempest</a> or <a href="https://www.europcar.co.za/rental-locations/rsa/western-cape/cape-town-international-airport" target="_blank">Europcar</a>.</li>
             <li>Public transport is not recommended.</li>
-            <li>For those who may need a visa for South Africa, check the <a href="https://ehome.dha.gov.za/epermit/home" target="_blank">evisa website</a></li>
+            <li>For those who may need a visa for South Africa, check the <a href="https://ehome.dha.gov.za/epermit/home" target="_blank">evisa website.</a></li>
         </ul>
     </div>
     <div class="activities">
@@ -345,7 +345,7 @@
             <li><a href="https://www.sanparks.org/parks/table-mountain" target="_blank">Table Mountain</a> is a must do with a beautiful view of the city and the ocean.</li>
             <li><a href="https://capepoint.co.za/" target="_blank">Cape Point</a> is a wonderful national park with beautiful views that includes <a href="https://www.simonstown.com/"  target="_blank">Simon's Town</a> and its penguin colony. We recommend going via Chapman's Peak.</li>
             <li><a href="https://www.robben-island.org.za/" target="_blank">Robben Island</a> was a place of imprisonment for Nelson Mandela and many other political prisoners. It is now a UNESCO World Heritage Site.</li>
-            <li>You can visit the <a href="https://www.southafrica.net/gl/en/travel/category/places-to-go/big-city-life/cape-town" target="_blank"> South African Tourism website</a> to find more activities</li>
+            <li>You can visit the <a href="https://www.southafrica.net/gl/en/travel/category/places-to-go/big-city-life/cape-town" target="_blank"> South African Tourism website</a> to find more activities.</li>
         </ul>
     </div>
     </div>
