--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <section id="Dress-Code">
         <div class="dress-code-container">
             <h2>The Dress Code</h2>
-            <p>We're so excited to celebrate this special day with you, and we'd love for everyone to join us in embracing the elegance of a  semi formal dress code. Here's a little guidance to help you plan your outfit:
+            <p class="dress-text">We're so excited to celebrate this special day with you, and we'd love for everyone to join us in embracing the elegance of a  semi formal dress code. Here's a little guidance to help you plan your outfit:
                 This is your chance to shine and celebrate in style. We can't wait to see everyone looking their absolute best as we make unforgettable memories together!
                 <br>
                 <br>
@@ -189,6 +189,55 @@
             <span class="dot"></span>
         </div>
         
+
+        <div class="color-palette-grid">
+            <div class="color-tile">
+                <div class="color-swatch" style="background-color: #D9C89E;">
+                    <p class="color-caption">#D9C89E</p>
+                </div>
+            </div>
+            <div class="color-tile">
+                <div class="color-swatch" style="background-color: #CEB888;">
+                    <p class="color-caption">#CEB888</p>
+                </div>
+            </div>
+            <div class="color-tile">
+                <div class="color-swatch" style="background-color: #A89968;">
+                    <p class="color-caption">#A89968</p>
+                </div>
+            </div>
+            <div class="color-tile">
+                <div class="color-swatch" style="background-color: #FCD299;">
+                    <p class="color-caption">#FCD299</p>
+                </div>
+            </div>
+            <div class="color-tile">
+                <div class="color-swatch" style="background-color: #E1B87F;">
+                    <p class="color-caption">#E1B87F</p>
+                </div>
+            </div>
+            <div class="color-tile">
+                <div class="color-swatch" style="background-color: #D6A461;">
+                    <p class="color-caption">#D6A461</p>
+                </div>
+            </div>
+            <div class="color-tile">
+                <div class="color-swatch" style="background-color: #E1B7A7;">
+                    <p class="color-caption">#E1B7A7</p>
+                </div>
+            </div>
+            <div class="color-tile">
+                <div class="color-swatch" style="background-color: #D5A286;">
+                    <p class="color-caption">#D5A286</p>
+                </div>
+            </div>
+            <div class="color-tile">
+                <div class="color-swatch" style="background-color: #C58B68;">
+                    <p class="color-caption">#C58B68</p>
+                </div>
+            </div>
+            <!-- Add more color tiles as needed -->
+        </div>
     </section>
 
     <section id="Location">
