--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
     <section id="Dress-Code">
         <div class="dress-code-container">
             <h2>The Dress Code</h2>
-            <p class="dress-text">We're so excited to celebrate this special day with you, and we'd love for everyone to join us in embracing the elegance of a  semi formal dress code. Here's a little guidance to help you plan your outfit:
-                This is your chance to shine and celebrate in style. We can't wait to see everyone looking their absolute best as we make unforgettable memories together!
+            <p class="dress-text">We're so excited to celebrate this special day with you, and we'd love for everyone to join us in embracing the elegance of a  semi formal dress code.
+                This is your chance to shine and celebrate in style.
                 <br>
                 <br>
                 Ladies: Floor-length gowns, elegant cocktail dresses, or sophisticated evening separates.
@@ -146,6 +146,11 @@
                 <br>
                 <br>
                 Footwear: Dress shoes or heels—let's keep it timeless and chic!
+                <br>
+                <br>
+                Colour: Light yellow/Beige/Apricot/Light Green and other warm colours.
+                <br>
+                <em>Please do not wear red, black or pure white.</em>
             </p>
         </div>
 
@@ -207,6 +212,11 @@
                 </div>
             </div>
             <div class="color-tile">
+                <div class="color-swatch" style="background-color: #FFFFE0;">
+                    <p class="color-caption">#FFFFE0</p>
+                </div>
+            </div>
+            <div class="color-tile">
                 <div class="color-swatch" style="background-color: #FCD299;">
                     <p class="color-caption">#FCD299</p>
                 </div>
@@ -217,23 +227,18 @@
                 </div>
             </div>
             <div class="color-tile">
-                <div class="color-swatch" style="background-color: #D6A461;">
-                    <p class="color-caption">#D6A461</p>
+                <div class="color-swatch" style="background-color: #FBCEB1;">
+                    <p class="color-caption">#FBCEB1</p>
                 </div>
             </div>
             <div class="color-tile">
-                <div class="color-swatch" style="background-color: #E1B7A7;">
+                <div class="color-swatch" style="background-color: #E1B7A7">
                     <p class="color-caption">#E1B7A7</p>
                 </div>
             </div>
             <div class="color-tile">
                 <div class="color-swatch" style="background-color: #D5A286;">
                     <p class="color-caption">#D5A286</p>
-                </div>
-            </div>
-            <div class="color-tile">
-                <div class="color-swatch" style="background-color: #C58B68;">
-                    <p class="color-caption">#C58B68</p>
                 </div>
             </div>
             <!-- Add more color tiles as needed -->
@@ -330,7 +335,7 @@
                             <span class="feature-icon">
                                 <i class="fa-solid fa-calendar-check"></i>
                             </span>
-                            <p>Confirm your attendance by using <em>Partiful</em></p>
+                            <p>Confirm your attendance via <em>Partiful</em></p>
                         </div>
                     </a>
 
@@ -339,7 +344,16 @@
                             <span class="feature-icon">
                                 <i class="fa-solid fa-headphones"></i>
                             </span>
-                            <p>A Spotify or Apple Music playlist will available here</p>
+                            <p>A Spotify or Apple Music playlist will be available soon</p>
+                        </div>
+                    </a>
+
+                    <a href="https://www.icloud.com/invites/090jECHMOrYwPV1o0PC4NOFyA" target="_blank">
+                        <div class="feature-item">
+                            <span class="feature-icon">
+                                <i class="fa-solid fa-camera"></i>
+                            </span>
+                            <p>Make memories by adding to the iCloud photo album</p>
                         </div>
                     </a>
 
@@ -349,15 +363,6 @@
                                 <i class="fa-solid fa-utensils"></i>
                             </span>
                             <p>View food and beverage details here</p>
-                        </div>
-                    </a>
-
-                    <a href="javascript:void(0)" onclick="photoNotReady()">
-                        <div class="feature-item">
-                            <span class="feature-icon">
-                                <i class="fa-solid fa-camera"></i>
-                            </span>
-                            <p>Make memories by adding to the photo album</p>
                         </div>
                     </a>
 
@@ -381,7 +386,11 @@
                 <h3>Flights</h3>
                     <ul>
                         <li>From Hong Kong: Fly direct with <a href="https://www.cathaypacific.com/" target="_blank">Cathay Pacific</a> to OR Tambo International Airport in Johannesburg.</li>
-                        <li>Other options from Hong Kong: <a href="https://www.qatarairways.com/" target="_blank">Qatar Airways</a> to Cape Town via Doha. Or <a href="https://www.emirates.com/" target="_blank">Emirates</a> to Cape Town via Dubai. Other options include <a href="https://www.ethiopianairlines.com/book/booking/flight" target="_blank">Ethiopian</a>, <a href="https://www.qantas.com/" target="_blank">Qantas</a> and <a href="https://www.turkishairlines.com" target="_blank">Turkish</a> Airlines., but these may be a longer travel time.</li><br>
+                        <li>Other options from Hong Kong: <a href="https://www.qatarairways.com/" target="_blank">Qatar Airways</a> to Cape Town via Doha. 
+                        <br>    
+                        Or <a href="https://www.emirates.com/" target="_blank">Emirates</a> to Cape Town via Dubai. 
+                        <br>
+                        Other options include <a href="https://www.ethiopianairlines.com/book/booking/flight" target="_blank">Ethiopian</a>, <a href="https://www.qantas.com/" target="_blank">Qantas</a> and <a href="https://www.turkishairlines.com" target="_blank">Turkish</a> Airlines, but these may have longer travel times.</li><br>
                         <li>From Johannesburg: Fly direct to Cape town, with either <a href="https://www.flysafair.com/" target="_blank">FlySafair</a>, <a href="https://www.lift.co.za/" target="_blank">Lift Airways</a>, <a href="https://www.flysaa.com/" target="_blank">FlySAA</a>, <a href="https://www.cemair.co.za/index.php" target="_blank">CemAir</a> or <a href="https://www.flyairlink.com/en/za/" target="_blank">Airlink</a>.</li>
                         <li>From Cape Town: Use Uber or Bolt to get to Webersburg from the airport. Or rent a car from <a href="https://www.hertz.co.za/" target="_blank">Hertz</a>, <a href="http://www.budget.co.za/" target="_blank">Budget</a>, <a href="https://www.sani.co.za/" target="_blank">Sani Sixt</a>, <a href="https://www.woodford.co.za/branches/cape-town-international" target="_blank">Woodford</a>, <a href="https://www.avis.co.za/" target="_blank">Avis</a>, <a href="https://www.tempestcarhire.co.za/rental-locations/western-cape/cape-town-international-airport" target="_blank">Tempest</a> or <a href="https://www.europcar.co.za/rental-locations/rsa/western-cape/cape-town-international-airport" target="_blank">Europcar</a>.</li>
                         <li>Public transport is not recommended.</li>
@@ -438,7 +447,6 @@
                         </div>
                     </div>
                 </div>
-            
                 <div class="contact-message">
                     <p>Have questions? Don't hesitate to reach out to us!</p>
                     <p>We're here to help make our special day perfect for everyone.</p>
