--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+8 8<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -335,7 +335,7 @@
                             <span class="feature-icon">
                                 <i class="fa-solid fa-calendar-check"></i>
                             </span>
-                            <p>Confirm your attendance via <em>Partiful</em></p>
+                            <p>Click here to confirm your attendance via <em>Partiful</em></p>
                         </div>
                     </a>
 
