--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <br> 
             Dinner will be served during the ceremony, more details will be provided closer to the date.
             <br>
-            The Bistro will be open for breakfast and lunch on the day of the wedding. Guests will need to liaise with the restaurant and pay for their own meals there.
+            The Bistro will not be open for lunch during the day of the wedding, guests will have to visit nearby estates or Stellenbosch to find restaurants.
             <br>
             There is a bar available at the venue. It will be an open bar up to a specified amount. You may bring your own alcohol but you will have to pay a corkage fee.
         </p>
