--- a/index.html
+++ b/index.html
@@ -640,10 +640,11 @@
     <script src="./script.js"></script>
 
     <!-- Floating Notification Button and Modal -->
+<!--
     <div id="notification-container">
       <button id="notification-button" class="notification-button">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell"><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path><path d="M13.73 21a2 2 0 0 1-3.46 0"></path></svg>
-        <span class="notification-badge">1</span> <!-- Optional: Badge for unread count -->
+        <span class="notification-badge">!</span>
       </button>
 
       <div id="notification-modal" class="notification-modal">
@@ -651,10 +652,10 @@
           <span id="notification-close" class="notification-close-button">&times;</span>
           <h2>Important Updates</h2>
           <p>There are updates to the Bistro operating times during the wedding day. Check The Ceremony Section.</p>
-          <!-- Add more update details here -->
         </div>
       </div>
     </div>
+-->
     <!-- End Floating Notification -->
   </body>
 </html>
