--- a/index.html
+++ b/index.html
@@ -380,9 +380,7 @@
         </div>
       </section>
       <p>
-        The estate will give us a list of rooms available approximately 3 months
-        before the wedding. Contact Webersburg directly if you urgently want to
-        stay there.
+        The Webersburg website will show the venue as fully booked out for the wedding time frame, this is so we can have time to help those who want to stay there. Contact us directly so that we can book a room on your behalf and for more details.
         <br />
         <br />
         There are many other options for accomodation in Stellenbosch, including
