--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           Footwear: Dress shoes or heels—let's keep it timeless and chic!
           <br />
           <br />
-          Colour: Light yellow/Beige/Apricot/Light Green and other warm colours.
+          Colour: Light yellow/Beige/Apricot/Light Green, Light Blue and other warm colours.
           <br />
           <em>Please do not wear red, black or pure white.</em>
         </p>
