--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           Footwear: Dress shoes or heels—let's keep it timeless and chic!
           <br />
           <br />
-          Colour: Light yellow/Beige/Apricot/Light Green, Light Blue and other warm colours.
+          Colour: Light yellow/Beige/Apricot/Light Green/Light Blue and other warm colours.
           <br />
           <em>Please do not wear red, black or pure white.</em>
         </p>
@@ -316,10 +316,12 @@
     <section id="Accommodation" class="accommodation">
       <h2>Webersburg Wine Estate</h2>
       <p>
-        The estate provides accommodation for up to 50 guests. Some rooms will
-        be for family only. Some of the rooms may already be booked out by other
-        guests.
+        The estate provides accommodation for up to 50 guests. Most rooms in the Manor House and The Jonkerhuis will be used for family.
+        <br>
+        Please contact Julia at 
+          <a class="email" href="mailto:julia.proteina@gmail.com" >julia.proteina@gmail.com</a> for room availability and bookings.
       </p>
+
       <section class="accommodation-grid">
         <div class="accommodation-tile">
           <img
@@ -638,7 +640,6 @@
     <script src="./script.js"></script>
 
     <!-- Floating Notification Button and Modal -->
-<!--
     <div id="notification-container">
       <button id="notification-button" class="notification-button">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell"><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path><path d="M13.73 21a2 2 0 0 1-3.46 0"></path></svg>
@@ -649,11 +650,10 @@
         <div class="notification-modal-content">
           <span id="notification-close" class="notification-close-button">&times;</span>
           <h2>Important Updates</h2>
-          <p>There are updates to the Bistro operating times during the wedding day. Check The Ceremony Section.</p>
+          <p>Rooms bookings are now open for Webersburg Wine Estate, check out the accommodation section!</p>
         </div>
       </div>
     </div>
--->
     <!-- End Floating Notification -->
   </body>
 </html>
