--- a/index.html
+++ b/index.html
@@ -318,8 +318,9 @@
       <p>
         The estate provides accommodation for up to 50 guests. Most rooms in the Manor House and The Jonkerhuis will be used for family.
         <br>
+        <br />
         Please contact Julia at 
-          <a class="email" href="mailto:julia.proteina@gmail.com" >julia.proteina@gmail.com</a> for room availability and bookings.
+          <a class="email" href="mailto:julia.proteina@gmail.com" ><em>julia.proteina@gmail.com</em></a> for room availability and bookings.
       </p>
 
       <section class="accommodation-grid">
